Fixed hamburger icon being off center

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap");
 @import url(utilities.css);
 @import url(typography.css);
 @import url(colors.css);
@@ -19,7 +19,7 @@
 body {
   line-height: 1.5;
   overflow-x: hidden;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   padding-left: constant(safe-area-inset-left);
   height: -webkit-fill-available;
@@ -66,7 +66,7 @@ input:-webkit-autofill:focus {
     height: 100%;
     margin: auto;
     .hero-title {
-      font-family: 'Open Sans', sans-serif;
+      font-family: "Open Sans", sans-serif;
       font-weight: 700;
       font-size: clamp(3rem, 8vw, 6rem);
       margin-bottom: 3rem;
@@ -128,7 +128,7 @@ input:-webkit-autofill:focus {
 }
 
 .nav-links li a::before {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 100%;
@@ -230,7 +230,7 @@ input:-webkit-autofill:focus {
   height: 100%;
   overflow: hidden;
   &:after {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -596,8 +596,8 @@ input:-webkit-autofill:focus {
         }
       }
       & input:focus,
-      & input[type='email'],
-      & input[id='phone']:focus {
+      & input[type="email"],
+      & input[id="phone"]:focus {
         border: none;
         caret-color: var(--light);
       }
@@ -618,7 +618,7 @@ input:-webkit-autofill:focus {
       color: var(--black-900);
     }
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       display: block;
       top: 100%;
@@ -1053,5 +1053,5 @@ footer .container .footer-socials i {
 }
 
 .toggle .line3 {
-  transform: rotate(45deg) translate(-5px, -6px);
+  transform: rotate(45deg) translate(-5px, -5px);
 }
